# Daku
# Copyright © 2022 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - MIT License (https://mit-license.org/)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "daku"
version = "0.2.0"
license = "Apache-2.0 OR MIT OR BSL-1.0"
description = "Interface to the Daku API"
repository = "https://github.com/ardaku/daku"
documentation = "https://docs.rs/daku"
homepage = "https://github.com/ardaku/daku/blob/stable/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "src/*"]
categories = [
    "api-bindings",
    "asynchronous",
    "hardware-support",
    "os",
    "wasm",
]
keywords = ["daku", "webassembly", "ardaku", "quantii", "system"]
readme = "README.md"
edition = "2021"
