# Daku
# Copyright © 2022 Jeron Aldaron Lau.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[workspace]
default-members = ["."]
members = [".", "cargo-daku"]

[package]
name = "daku"
version = "0.5.0"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Interface to the Daku API"
repository = "https://github.com/ardaku/daku"
documentation = "https://docs.rs/daku"
homepage = "https://github.com/ardaku/daku/blob/stable/CHANGELOG.md"
include = ["Cargo.toml", "README.md", "src/*"]
categories = [
    "api-bindings",
    "asynchronous",
    "hardware-support",
    "os",
    "wasm",
]
keywords = ["daku", "webassembly", "ardaku", "quantii", "system"]
readme = "README.md"
edition = "2021"

[dependencies.log]
version = "0.4"
optional = true
default-features = false

[features]
log = ["dep:log"]
prompt = []

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"
targets = []
rustdoc-args = ["--cfg", 'target_os="daku"']
